# Projekt_Wizualizacja_Dzwieku

./: .gitignore  CMakeLists.txt
docs/: Doxyfile  header.html
inc/: DataProcessor.h  FFTWidget.h  FFTWidget.hh  McuAudioReceiver.h  McuAudioReceiver.hh  OscillogramWidget.h  OscillogramWidget.hh  SpectrogramWidget.h  config.h  config.hh  mainwindow.h  style.h
src/: DataProcessor.cpp  FFTWidget.cpp  McuAudioReceiver.cpp  OscillogramWidget.cpp  SpectrogramWidget.cpp  main.cpp  mainwindow.cpp
ui/: MainWindow.ui  mainwindow.ui
